updated formatting for stop failing section.  Also updated all other pages to centre align format

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,10 @@ body {
       }
 } */
 
+.center-align-container {
+    text-align: center;
+}
+
 nav {
     display: flex;
     justify-content: space-evenly;
@@ -47,6 +51,7 @@ header h1 {
     font-size: 9rem;
     line-height: 0;
     color: #fff;
+    text-align: center;
 }
 
 
@@ -63,7 +68,7 @@ body {
   -webkit-animation-duration: 10s;
   -webkit-animation-iteration-count: 100;
   -webkit-animation-direction: alternate; */
-  text-align: center;
+  /* text-align: center; */
 }
 
 /* <div style="position: fixed; z-index: -1; width: 100%; height: 100%; opacity: 10%;">
@@ -136,27 +141,52 @@ img {
     padding-left: 10px;
 }
 
+.business-body {
+    margin: 0 auto;
+    width: 70vw;
+}
+
+.business-intro section:first-child {
+    padding: 40px 0 0;
+}
+
+.business-intro section {
+    padding: 20px 0 0;
+    font-size: 1.5vw;
+}
+
+.businesses-border {
+    margin: 5% 0;
+    padding: 2%;
+    border: 2px solid rgba(141, 135, 135, 1);
+    border-radius: 20px;
+}
+
 .business-name {
-    font-weight: bold;
-    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0 20px;
+    margin: 2% auto;
+    font-size: 1.5vw;
+    background-color: rgba(226, 201, 206, 1);
+    border-radius: 20px;
 }
 
 .business-info {
     display: flex;
-    /* width: 100%; */
-    justify-content: space-evenly;
-    align-content: center;
 }
 
-.business-image {
-    width: 100%;
+.business-image img {
+    border-radius: 20px;
+    width: 20vw;
+    height: 14vw;
+    object-fit: cover;
 }
 
 .business-contact-details {
     align-self: center;
-    text-align: left;
-    margin-right: auto;
-    padding-left: 20px;
+    padding-left: 40px;
+    font-size: 1.5vw;
 }
 
 @media (max-width: 55em) {
